Hopefully fix the background on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -29,7 +29,7 @@
 
 body {
     background: url(/img/background-compressed.jpg) no-repeat center center fixed;
-    background-size: cover;
+    background-size: cover 100lvh;
     
     margin: 0;
     width: 100%;
